--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongoose": "^7.5.0",
     "dotenv": "^16.3.1",
     "cors": "^2.8.5"
+    "cloudinary": "^1.41.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
