--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "multer": "^1.4.5-lts.1",
     "mongoose": "^7.5.0",
     "dotenv": "^16.3.1",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
     "cloudinary": "^1.41.0"
   },
   "devDependencies": {
